[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/knight/Knight - Idle 2.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/dashed_circle.png" type="Texture" id=3]
[ext_resource path="res://assets/images/knight/Knight - Right 5.png" type="Texture" id=4]
[ext_resource path="res://assets/images/knight/Knight - Right 4.png" type="Texture" id=5]
[ext_resource path="res://assets/images/knight/Knight - Right 8.png" type="Texture" id=6]
[ext_resource path="res://assets/images/knight/Knight - Right 2.png" type="Texture" id=7]
[ext_resource path="res://assets/images/knight/Knight - Right 1.png" type="Texture" id=8]
[ext_resource path="res://assets/images/knight/Knight - Right 3.png" type="Texture" id=9]
[ext_resource path="res://assets/images/knight/Knight - Right 6.png" type="Texture" id=10]
[ext_resource path="res://assets/images/knight/Knight - Right 7.png" type="Texture" id=11]
[ext_resource path="res://assets/images/knight/Knight - Idle 1.png" type="Texture" id=12]
[ext_resource path="res://assets/audio/footstep_concrete_000.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/images/knight/Knight_Pose_-_2.png" type="Texture" id=14]
[ext_resource path="res://assets/audio/handleCoins.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/images/sweat_drop.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "grabbing",
"speed": 1.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 1 ) ],
"loop": false,
"name": "blink",
"speed": 6.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.237
height = 21.9538

[sub_resource type="CapsuleShape2D" id=4]
radius = 25.5605

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 10, 10, 1 )
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 24.51
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 49
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.281194, 0.264711 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24.056 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24.698 )
shape = SubResource( 4 )

[node name="GrabTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="GrabPoint" type="Node2D" parent="."]
position = Vector2( 0.951294, 4.2653 )

[node name="CircleIndicator" type="Sprite" parent="GrabPoint"]
texture = ExtResource( 3 )

[node name="ChainBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Sweat" type="Particles2D" parent="."]
position = Vector2( 18.0748, -40.1927 )
emitting = false
amount = 4
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 16 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_GrabTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
